--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <script src="/script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
     <title>Journalism</title>
 </head>
 <body>
@@ -50,7 +50,7 @@
 
         <section class="landing" id="home">
             <div class="landing-image">
-                <img src="/assets/LandingBackground.jpeg" alt="Landing background">
+                <img src="./assets/LandingBackground.jpeg" alt="Landing background">
             </div>
             <main class="landing-hero primary-font">
                 <h1 class="hero-title">Titulo fera</h1>
@@ -70,7 +70,7 @@
                         A cidade de São Paulo, possui cerca de 54% de seu território coberto por áreas verdes, como mostra a pesquisa realizada pela secretaria do verde e meio ambiente em 2023, o que indica um aumento de cerca de 6% desde 2020, quando a pesquisa indicou 48% de cobertura vegetal em SP. Os principais focos de vegetação se encontram no extremo norte, como por exemplo nas regiões das subprefeituras de Perus e Jaçanã-tremembé, e na área da subprefeitura de Parelheiros, no extremo sul da cidade.    
                     </p>
                     <div class="report-image-wrapper demographic-graph">
-                        <img src="/assets/Demographic.jpeg" alt="Demographic graph">
+                        <img src="./assets/Demographic.jpeg" alt="Demographic graph">
                         <div class="report-image-label">
                             Mapa da cidade de SP com os índices de vegetação.
                         </div>
@@ -143,6 +143,7 @@
                         Os anos 2000 foram a consolidação de todos esses anos de existência do clube, com seus departamentos bem estruturados, um senso de comunidade forte, valores culturais bem estabelecidos, como o incentivo a ecologia e a preservação.
                     </p>
                 </div>
+                
             </div>
 
         </section>
