add media queries + fix sidebar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./queries.css">
     <script src="./script.js" defer></script>
     <title>Reportagem</title>
 
@@ -23,31 +24,26 @@
         </div>
     </header>
 
-    <!-- <div class="sidebar-trigger">
+    <div class="sidebar-trigger">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
         </svg>
     </div>
     <nav class="sidebar primary-font">
         <button class="sidebar-close">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-left-fill" viewBox="0 0 16 16">
+                <path d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
             </svg>
         </button>
 
         <div class="sidebar-sections">
             <a href="#home" class="sidebar-home">Home</a>
-            
             <ul class="sidebar-list">
-                <li class="sidebar-item"><a href="#section-a" class="sidebar-link">Section A</a></li>
-                <li class="sidebar-item"><a href="#section-b" class="sidebar-link">Section B</a></li>
-                <li class="sidebar-item"><a href="#section-c" class="sidebar-link">Section C</a></li>
-                <li class="sidebar-item"><a href="#section-d" class="sidebar-link">Section D</a></li>
+                <li class="sidebar-item"><a href="#cap-1" class="sidebar-link">Capítulo 1</a></li>
+                <li class="sidebar-item"><a href="#cap-2" class="sidebar-link">Capítulo 2</a></li>
             </ul>
-
-           <a href="#sources" class="sidebar-sources">Sources</a>
         </div>
-    </nav> -->
+    </nav>
 
     <main class="content">
 
@@ -68,7 +64,8 @@
                 <div id="cap-1" class="page-markers"></div>
                 <div class="report-section" id="section-a">
                     <h1 class="report-section-title line-highlight">
-                        1° capítulo: A cidade de São Paulo
+                        <span>1° capítulo:</span>
+                        <span>A cidade de São Paulo</span>
                     </h1>
                     <p class="report-section-text">
                         A cidade de São Paulo, possui cerca de 54% de seu território coberto por áreas verdes, como mostra a pesquisa realizada pela secretaria do verde e meio ambiente em 2023, o que indica um aumento de cerca de 6% desde 2020, quando a pesquisa indicou 48% de cobertura vegetal em SP. Os principais focos de vegetação se encontram no extremo norte, como por exemplo nas regiões das subprefeituras de Perus e Jaçanã-tremembé, e na área da subprefeitura de Parelheiros, no extremo sul da cidade.    
@@ -120,7 +117,8 @@
                 <div id="cap-2" class="page-markers"></div>
                 <div class="report-section" id="section-c">
                     <h1 class="report-section-title line-highlight">
-                        2º capítulo: O clube de campo de São Paulo
+                        <span>2º capítulo:</span>
+                        <span>O clube de campo de São Paulo</span>
                     </h1>
                     <p class="report-section-text">
                         O clube de Campo de São Paulo, foi fundado em 1937, por um grupo de empreendedores que buscavam um contato maior com a natureza dentro da cidade de SP. Localizado nas margens da represa Guarapiranga, na região do extremo sul da cidade, o clube possui mais de 1.200.000 m2 de área, dos quais 200 mil m2 são de mata atlântica preservada que concentra mais de 200 espécies de fauna e flora.
