--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./queries.css">
     <script src="./script.js" defer></script>
+    <script src="./contentHandler.js" defer></script>
+
     <title>Reportagem</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,11 +18,8 @@
 <body>
 
     <header class="header">
-        <div class="header-nav">
+        <div class="header-nav" id="header-wrapper">
             <a href="#home" class="header-nav-link content-highlight">Home</a>
-            <a href="#report" class="header-nav-link content-highlight">Reportagem</a>
-            <a href="#cap-1" class="header-nav-link content-highlight">Capítulo 1</a>
-            <a href="#cap-2" class="header-nav-link content-highlight">Capítulo 2</a>
         </div>
     </header>
 
@@ -38,10 +37,7 @@
 
         <div class="sidebar-sections">
             <a href="#home" class="sidebar-home">Home</a>
-            <ul class="sidebar-list">
-                <li class="sidebar-item"><a href="#cap-1" class="sidebar-link">Capítulo 1</a></li>
-                <li class="sidebar-item"><a href="#cap-2" class="sidebar-link">Capítulo 2</a></li>
-            </ul>
+            <ul class="sidebar-list"></ul>
         </div>
     </nav>
 
@@ -59,92 +55,7 @@
         </section>
 
         <section class="main-content" id="report">
-
-            <div class="report-wrapper">
-                <div id="cap-1" class="page-markers"></div>
-                <div class="report-section" id="section-a">
-                    <h1 class="report-section-title line-highlight">
-                        <span>1° capítulo:</span>
-                        <span>A cidade de São Paulo</span>
-                    </h1>
-                    <p class="report-section-text">
-                        A cidade de São Paulo, possui cerca de 54% de seu território coberto por áreas verdes, como mostra a pesquisa realizada pela secretaria do verde e meio ambiente em 2023, o que indica um aumento de cerca de 6% desde 2020, quando a pesquisa indicou 48% de cobertura vegetal em SP. Os principais focos de vegetação se encontram no extremo norte, como por exemplo nas regiões das subprefeituras de Perus e Jaçanã-tremembé, e na área da subprefeitura de Parelheiros, no extremo sul da cidade.    
-                    </p>
-                    <div class="report-image-wrapper demographic-graph">
-                        <img src="./assets/Demographic.jpeg" alt="Demographic graph">
-                        <div class="report-image-label">
-                            Mapa da cidade de SP com os índices de vegetação.
-                        </div>
-                    </div>
-                    <p class="report-section-text">
-                        Uma característica que podemos perceber ao analisar a imagem desse mapa, é que nas áreas mais centrais da cidade,a distribuição de vegetação é baixa, e isso ocorre pelo alto nível de urbanização nesses locais que estão tomados por prédios e comércios, resultando em poucas brechas para existirem árvores e outras formas de natureza. E com o novo boom da construção civil na cidade, a tendência é que os níveis piorem ainda mais e que a taxa de urbanização aumente ainda mais.
-                    </p>
-                    <p class="report-section-text">
-                        O PMMA (O Plano Municipal de Conservação e Recuperação da Mata Atlântica) criado em 2006, e integrado no plano diretor de 2014 tem como objetivo direcionar de qual forma os municípios devem atuar com seus projetos de preservação, quais áreas devem ser os focos dos projetos, incentivo a educação ambiental, disponibilizar subsídios ambientais para os projetos etc.
-                    </p>
-                    <p class="report-section-text">
-                        O arquiteto urbanista, Breno Zylbersztajn formado pelo Mackenzie, possui experiência em consultoria socioambiental, trabalhou quatro anos na prefeitura de São Paulo na parte de segurança hídrica e paisagem urbana, gentilmente cedeu seu tempo para responder às seguintes perguntas.
-                    </p>
-                </div>
-
-                <div class="report-section" id="section-b">
-                    <h3 class="report-section-subtitle line-highlight">
-                        Como você enxerga o boom na construção civil na cidade e se ele é prejudicial para o meio ambiente?
-                    </h3>
-                    <p class="report-section-text">
-                        <span class="text-highlight">Breno</span><span>: Eu vejo como um bom sinal, a demanda por imóveis urbanos está movimentando a economia, arrecadando impostos, garantindo empregos, fazendo a economia girar. Mostrando que existe crédito na praça e vontade de investidores aceitarem o risco de empreender no setor. Essa movimentação da construção civil é resultado do plano diretor de 2014, que orienta o desenvolvimento da cidade até 2029. Desenvolvido com a ampla participação da sociedade civil e atendendo os princípios estabelecidos no Estatuto da Cidade que orienta o adensamento urbano, para os eixos do transporte público, visto que o uso de carros gera um grande resíduo de poluentes. Algumas leis foram derivadas desses processos, como as leis de ocupação do solo, o código de obras e edificações, a lei do zoneamento urbano entre outras, que servem como indicação de onde se pode construir, de como se pode construir e como se deve construir.</span>
-                    </p>
-                    <h3 class="report-section-subtitle line-highlight">
-                        Existem projetos que visem conciliar o crescimento urbano com o meio ambiente?
-                    </h3>
-                    <p class="report-section-text">
-                        <span class="text-highlight">Breno</span><span>: As áreas verdes em São Paulo, sejam matas ou espaços abertos, enfrentam dois problemas diferentes:a proteção ambiental e a expansão urbana. Enquanto a proteção ambiental, se prevista em lei, é obrigatória, a construção habitacional também precisa seguir normas e planos estabelecidos, porém devido a uma falta de regulamentação clara, conflitos acontecem entre a sociedade civil e a iniciativa privada. Hoje na cidade, um outro problema significativo é o passivo ambiental gerado por projetos públicos, que frequentemente ignoram normas ambientais. Empresas públicas, acumulam passivos ao não cumprirem termos de compensação ambiental em projetos que frequentemente substituem áreas verdes por infraestruturas que contradizem práticas sustentáveis. Um exemplo notável são os "Piscinões", que substituem árvores por estruturas cinzas. Uma proposta que pode combater esses conflitos é o manejo sustentável, onde árvores com risco de queda e em situação de perigo, seriam removidas de forma planejada e com compensação ambiental, além de que a sua madeira seria utilizada de forma a gerar receita e emprego.</span>
-                    </p>
-                    <h3 class="report-section-subtitle line-highlight">
-                        Qual a viabilidade das novas construções possuírem elementos sustentáveis? 
-                    </h3>
-                    <p class="report-section-text">
-                        <span class="text-highlight">Breno</span><span>: Eu vejo como um bom sinal, a demanda por imóveis urbanos está movimentando a economia, arrecadando impostos, garantindo empregos, fazendo a economia girar. Mostrando que existe crédito na praça e vontade de investidores aceitarem o risco de empreender no setor. Essa movimentação da construção civil é resultado do plano diretor de 2014, que orienta o desenvolvimento da cidade até 2029. Desenvolvido com a ampla participação da sociedade civil e atendendo os princípios estabelecidos no Estatuto da Cidade que orienta o adensamento urbano, para os eixos do transporte público, visto que o uso de carros gera um grande resíduo de poluentes. Algumas leis foram derivadas desses processos, como as leis de ocupação do solo, o código de obras e edificações, a lei do zoneamento urbano entre outras, que servem como indicação de onde se pode construir, de como se pode construir e como se deve construir.</span>
-                    </p>
-                    <h3 class="report-section-subtitle line-highlight">
-                        Existem projetos do governo que visem incentivar a preservação da Mata Atlântica?
-                    </h3>
-                    <p class="report-section-text">
-                        <span class="text-highlight">Breno</span><span>: O principal projeto que existe atualmente é o PMMA,que é o Plano Municipal de Mata Atlântica ele identifica, caracteriza e mapeia as porções de Mata Atlântica que estão na cidade.Ainda que eu ache incipiente, já é um sinal que o governo atua nesse sentido, que existem algumas coisas indo para frente. E existe uma série de parques, de áreas ambientais tombadas, o Parque da Serra da Cantareira é um bom exemplo disso. E eu acho que a gente vê também, não necessariamente indo direto ao foco, a prefeitura da cidade de São Paulo, ela tem se aproximado e firmado acordos com organizações internacionais para seguir um desenvolvimento mais sustentável, o acordo firmado recentemente com a ONU para seguir a política de Objetivos de Desenvolvimento Sustentável. Então, é um indicador, é um posicionamento que mostra essa tendência. Agora, o que eu queria ver é mesmo na prática, cadê a valorização dos parques urbanos, no meio da cidade.</span>
-                    </p>
-                </div>
-
-                <div id="cap-2" class="page-markers"></div>
-                <div class="report-section" id="section-c">
-                    <h1 class="report-section-title line-highlight">
-                        <span>2º capítulo:</span>
-                        <span>O clube de campo de São Paulo</span>
-                    </h1>
-                    <p class="report-section-text">
-                        O clube de Campo de São Paulo, foi fundado em 1937, por um grupo de empreendedores que buscavam um contato maior com a natureza dentro da cidade de SP. Localizado nas margens da represa Guarapiranga, na região do extremo sul da cidade, o clube possui mais de 1.200.000 m2 de área, dos quais 200 mil m2 são de mata atlântica preservada que concentra mais de 200 espécies de fauna e flora.
-                    </p>
-                    <p class="report-section-text">
-                        Nos anos de 1950, com a criação de novas estradas que ligavam o centro até a zona sul, o clube passou a ter novos sócios e viu suas estruturas ficarem pequenas, o que levou a um plano de expansão interno, que constava na criação de um núcleo específico para cada modalidade esportiva que existia lá. Em 1959, o hípico foi fundado com a ajuda de sócios que eram engenheiros e paisagistas.
-                    </p>
-                    <p class="report-section-text">
-                        Durante os anos de 1960, o clube se viu cada vez mais cheio e com sua comunidade mais consolidada, inicialmente limitados a mil títulos para os sócios, foi preciso alterar o estatuto, permitindo que os filhos dos sócios, que atingissem a maioridade pudessem continuar frequentando as dependências, como sócios adjuntos. No final da década o campo de golfe foi finalizado com seus 18 buracos, e torneios passaram a acontecer. Nessa mesma época as primeiras casas para os sócios foram construídas.
-                    </p>
-                    <p class="report-section-text">
-                        Na década de 70, após roubos às casas, o clube decidiu por construir um muro que percorre todo o perímetro do clube que não fosse cercado pela represa, cerca de 4 mil metros de extensão. A média de carros que frequentavam o clube em um final de semana, de sexta a domingo, passava dos 500.
-                    </p>
-                    <p class="report-section-text">
-                        Os anos 80, marcaram o início das medidas de preservação do meio ambiente pelo clube, como o artigo 2° do seu estatuto previa, ”A conservação das áreas verdes do Clube representa a principal aspiração dos sócios e deve constituir a obrigação fundamental das Diretorias.”. Os primeiros registros dessas medidas constam de 1983, em que se realizou a limpeza e replantio de árvores de diferentes espécies, dentre as quais se destacavam as frutíferas, com o objetivo de atrair passageiros, e uso de matéria orgânica coletada para a produção de adubo.Um ponto negativo desse período, foi o aumento da violência no entorno do clube, o que levou a implantação de uma segurança profissional, visando o aumento da segurança dos frequentadores.
-                    </p>
-                    <p class="report-section-text">
-                        Durante os anos 90 o clube focou em tentar resgatar a vontade dos jovens de frequentá-lo, com a criação de novas festas e eventos destinados a esse público.A parte da preservação expandiu também, com a criação de novos viveiros para as espécies que viviam no clube.
-                    </p>
-                    <p class="report-section-text">
-                        Os anos 2000 foram a consolidação de todos esses anos de existência do clube, com seus departamentos bem estruturados, um senso de comunidade forte, valores culturais bem estabelecidos, como o incentivo a ecologia e a preservação.
-                    </p>
-                </div>
-                
-            </div>
-
+            <div class="report-wrapper" id="content-wrapper"></div>
         </section>
 
     </main>
