Reorganized directory structure.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./queries.css">
-    <script src="./script.js" defer></script>
-    <script src="./contentHandler.js" defer></script>
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/queries.css">
+    <script src="./global.js" defer></script>
+    <script src="./data/contentHandler.js" defer></script>
 
     <title>Reportagem</title>
 
