Updated content and content handling.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <main class="landing-hero primary-font">
                 <h1 class="hero-title">Reportagem 2025</h1>
                 <p class="hero-subtitle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, accusamus quis, harum magni quia accusantium rem placeat delectus quod quisquam illum? Tempora omnis pariatur quia. Unde, reiciendis non. Asperiores, quia.</p>
-                <p class="hero-subtitle hero-signature">by Eduardo Saliby Salomão</p>
             </main>
+            <p id="signature">by Eduardo Saliby Salomão</p>
         </section>
 
         <section class="main-content" id="report">
