--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                 <img src="./assets/LandingBackground.jpeg" alt="Landing background">
             </div>
             <main class="landing-hero primary-font">
-                <h1 class="hero-title">Reportagem 2025</h1>
-                <p class="hero-subtitle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, accusamus quis, harum magni quia accusantium rem placeat delectus quod quisquam illum? Tempora omnis pariatur quia. Unde, reiciendis non. Asperiores, quia.</p>
+                <h1 class="hero-title">Preservação da Mata Atlântica pelo Clube de Campo de São Paulo</h1>
+                <p id="signature">by Eduardo Saliby Salomão</p>
             </main>
-            <p id="signature">by Eduardo Saliby Salomão</p>
         </section>
 
         <section class="main-content" id="report">
