--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./global.js" defer></script>
     <script src="./data/contentHandler.js" defer></script>
 
-    <title>Reportagem</title>
+    <title>Preservação da Mata Atlântica pelo Clube de Campo de São Paulo</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
 
     <header class="header">
         <div class="header-nav" id="header-wrapper">
-            <a href="#home" class="header-nav-link content-highlight">Home</a>
+            <a href="#home" class="header-nav-link content-highlight">Capa</a>
         </div>
     </header>
 
@@ -36,7 +36,7 @@
         </button>
 
         <div class="sidebar-sections">
-            <a href="#home" class="sidebar-home">Home</a>
+            <a href="#home" class="sidebar-home">Capa</a>
             <ul class="sidebar-list"></ul>
         </div>
     </nav>
