--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             <div class="report-wrapper" id="content-wrapper"></div>
         </section>
 
+        <p id="warning">
+            ESTE TRABALHO DE CONCLUSÃO DE CURSO NÃO REFLETE A OPINIÃO DA UNIVERSIDADE PRESBITERIANA MACKENZIE. SEU CONTEÚDO E ABORDAGEM SÃO DE TOTAL RESPONSABILIDADE DE SEU AUTOR.
+        </p>
+        
     </main>
 
 </body>
